fix: add min-width to material symbols to fix icon resizing issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,8 @@ body{
   font-style: normal;
   font-size: 24px;
   line-height: 1;
-  width: 1em;
+  min-width: 1em;
+  min-height: 1em;
   overflow: hidden;
   text-align: center;
   letter-spacing: normal;
